# editor

./: .travis.yml  CMakeLists.txt
include/: circle.h  controller.h  idrawablefigure.h  image.h  model.h  observable.h  observer.h  point.h  rect.h  triangle.h  view.h
src/: editor.cpp  lib.cpp
test/: gtest.cpp
